# bitcorp-erp

./: .commitlintrc.json  .dockerignore  .env.example  .env.prod  .gitattributes  .gitignore  .mcp.json  .repomixignore  AGENTS.md  ARCHITECTURE.md  BACKEND_DTO_IMPLEMENTATION_GUIDE.md  BUILD_TROUBLESHOOTING.md  Bugs_And_Suggestions.md  CHECKLIST_IMPLEMENTATION_SUMMARY.md  CHECKLIST_TESTING_GUIDE.md  CHECKLIST_USER_GUIDE.md  CLAUDE.md  CLEANUP_REPORT.txt  CONTINUE-SESSION-14.md  CURRENT-STATUS.md  DATABASE_MIGRATION.md  DEPLOYMENT.md  DOCKER_FIXES_SUMMARY.md  FOR_COLLEAGUE.md  IMPLEMENTATION_REPORT.md  LOGIN_FIX_SUMMARY.md  Makefile  PHASE-21-SESSION-1-COMPLETE.md  PHASE_15_FRONTEND_SUMMARY.md  PLAYWRIGHT_MCP_SETUP.md  PRD_Innovation.md  PRD_Innovation_ES.html  PRD_Innovation_ES.md  Propuestas_AI_Bitcorp_ERP.pptx  QUICK_START_WSL2.md  README.md  VALUATION_PDF_FIXED.md  VALUATION_PDF_PROGRESS_REPORT.md  aero_pdf_style.css  bugs.md  (+24 more)
backend/: .env.example  .eslintrc.json  .gitignore  CLAUDE.md  PHASE_3.11_PROVIDER_CONTACT_MIGRATION.md  PHASE_3.12_PROVIDER_FINANCIAL_INFO_MIGRATION.md  PHASE_3.14_PROJECT_MIGRATION.md  PHASE_3.7_TIMESHEET_MIGRATION.md  PHASE_3.9_EMPLOYEE_MIGRATION.md  PHASE_3_OVERALL_PROGRESS.md  PHASE_4.4_LOGGER_REPLACEMENT_PLAN.md  PHASE_4_PLAN.md  PRODUCTION_READINESS_BASELINE.md  README.md  TENANT_MIGRATION_STATUS.md  knip.json  package-lock.json  package.json  pyproject.toml  tsconfig.json
backend/alembic/: env.py
backend/app/: main.py
backend/eslint-rules/: index.js  package.json
backend/scripts/: db.sh  service-audit-progress.md
backend/src/: index.ts  legacy_migration.txt
backend/tests/: api-endpoints.test.ts  conftest.py  test_actas_devolucion.py  test_analitica.py  test_aprobaciones.py  test_apus.py  test_auth.py  test_caja_banco.py  test_caja_chica.py  test_catalogo.py  test_centros_costo.py  test_checklists.py  test_checklists_extras.py  test_configs.py  test_contratos.py  test_correo.py  test_cotizaciones.py  test_cron.py  test_cuentas_por_pagar.py  test_dashboard.py  test_empleados.py  test_pdf.py  (+36 more)
(+1738 files in other folders)
