[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[project]
name = "bitcorp-erp-backend"
version = "1.0.0"
description = "BitCorp ERP Backend - FastAPI"
requires-python = ">=3.12"
dependencies = [
    # Web framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "python-multipart>=0.0.18",
    # Database
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "psycopg2-binary>=2.9.0",
    # Redis
    "redis[hiredis]>=5.2.0",
    # Validation & Config
    "pydantic[email]>=2.10.0",
    "pydantic-settings>=2.7.0",
    # Auth
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt>=4.0.0,<4.1.0",
    # PDF
    "jinja2>=3.1.4",
    "playwright>=1.49.0",
    "pypdf>=5.1.0",
    # Excel / CSV
    "openpyxl>=3.1.5",
    # Email
    "aiosmtplib>=3.0.2",
    # Scheduling
    "apscheduler>=3.10.4",
    # Logging
    "structlog>=24.4.0",
    # HTTP client
    "httpx>=0.28.0",
    # Performance
    "orjson>=3.10.12",
    # Production server
    "gunicorn>=22.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-xdist>=3.5.0",
    "httpx>=0.28.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "coverage>=7.6.0",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["N818", "UP046"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
addopts = "-n auto --dist loadfile"
testpaths = ["tests"]
pythonpath = ["."]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["redis.*", "jose.*", "passlib.*", "structlog.*", "apscheduler.*"]
ignore_missing_imports = true
